<resources>
    <string name="app_name">Wise Owlet Tracker</string>
    <string name="welcome">Welcome </string>
    <string name="text1">You have completed</string>
    <string name="text2">minutes of study this week.</string>
    <string name="owlet">Owlet</string>
    <string name="Subjects">Choose Subject:</string>
    <string name="study_type">Type of Study:</string>
    <string name="Year">Choose Year:</string>
    <string name="daily_target">Daily Study Target:</string>
    <string name="weekly_target">Weekly Study Target:</string>
    <string name="Target">Subject Target:</string>
    <string name="log_in">Log In</string>
    <string name="stopwatch">Stop Watch</string>
    <string name="account">My Account</string>
    <string name="zerotime">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="resetPass">Reset Password</string>
    <string name="save_lap">Save Lap</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stop_watch">StopWatch</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="reset_password">Forgotten your password?</string>
    <string name="about_us">About Us</string>
    <string name="Rgt">Register</string>
    <string name="Reset">Reset password</string>
    <string name="add_target">Add Targets</string>
    <string name="Add">Add Subject</string>
    <string name="log">Log Study</string>
    <string name="quote">Quote</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="f_Name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="create_pass">Create Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="telephone">Telephone</string>
    <string name="btn_cont">Continue</string>
    <string name="Reg">Registration</string>
    <string name="year1">Year 1</string>
    <string name="year2">Year 2</string>
    <string name="year3">Year 3</string>
    <string name="year5">Year 5</string>
    <string name="year6">Year 6</string>
    <string name="ty">Transition Year</string>
    <string name="study_log">Log Study</string>
    <string name="enter_result">Enter Result</string>
    <string name="time">Time Spent</string>
    <string name="note">Add Note</string>
    <string name="personaldetails">Personal Details</string>
    <string name="update_phone">Update Phone</string>
    <string name="update_target">Update Target</string>
    <string name="update_subject">Update Subject Target</string>
    <string name="new_subject">Add New Subject / Target </string>
    <string name="exam">Exam</string>
    <string name="exam_result">Exam Result</string>
    <string name="add_result">Add Result</string>
    <string name="start_date">Study Report Start Date</string>
    <string name="end_date">Study Report End Date</string>
    <string name="exam_report">Exam Report</string>
    <string name="study_report">Study Report</string>
    <string name="line">Line</string>
    <string name="graph_msgs">Green Line is actual marks.</string>
    <string name="graph">Red Line is target marks.</string>
</resources>
