<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/first_gradient"
    tools:context="com.example.wiseowlet.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/item1"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item2"
        android:icon="@drawable/watch"
        android:title="@string/stopwatch"
        app:showAsAction="ifRoom" />
</menu>