<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".SetupSubjects">

    <EditText
        android:id="@+id/editDailyTarget"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/daily_target"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editWeeklyTarget"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/weekly_target"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editDailyTarget"
        app:layout_constraintTop_toBottomOf="@+id/editDailyTarget" />

    <Button
        android:id="@+id/btn_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginBottom="132dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:onClick="addTargets"
        android:text="@string/add_target"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="332dp"
        android:text="@string/Subjects"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/subSpinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="228dp"
        android:text="@string/Year"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/yearSpinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/textYear"
        app:layout_constraintTop_toBottomOf="@+id/textYear" />

    <EditText
        android:id="@+id/editTarget"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Target"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subSpinner"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="addSubject"
        android:text="@string/Add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTarget" />


</androidx.constraintlayout.widget.ConstraintLayout>