<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddStudyLog">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="100dp"
        android:text="@string/Subjects"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/subSpinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtStudyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="56dp"
        android:text="@string/study_type"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subSpinner" />

    <Spinner
        android:id="@+id/studySpinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="12dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/txtStudyType"
        app:layout_constraintTop_toBottomOf="@+id/txtStudyType" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/log"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="183dp"
        android:layout_height="42dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/note"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_log"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/time"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editTextNote"
        app:layout_constraintStart_toStartOf="@+id/editTextNote" />

</androidx.constraintlayout.widget.ConstraintLayout>